# Spirent_Internship

./: README.md
ChatSocket/: ChatSocket.sln
ChatSocket/ChatSocket/: ChatSocket.vcxproj  Server.cpp
ChatSocket/Server/: CMakeLists.txt  Server.cpp
Server/: PresenceServer.cpp  Server.cpp
